# tbx

./: .gitignore  .hello.tbx.un~  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  apm.yml  array_test.tbx  blueprint-bootstrap.md  blueprint-compiler.md  blueprint-language.md  blueprint.md  build.rs  build_support.rs  hello.tbx  loop.tbx
.claude/agents/: blueprint-updater.agent.md  fix-pr.agent.md  implement-issue.agent.md  orchestrate-issue.agent.md  plan-issue.agent.md  review-implementation.agent.md  spec-discussion.agent.md
.gemini/agents/: implement-issue.md  review-implementation.md
.github/: copilot-instructions.md
.github/agents/: blueprint-updater.agent.md  implement-issue.agent.md  plan-issue.agent.md  review-implementation.agent.md  spec-discussion.agent.md
.github/hooks/: security.json
.github/scripts/: block-tmp-writes.sh
.github/workflows/: ci.yml
.tmp/: commit-message-982.txt  commit-message.txt  final-remove-temp-commit-message.txt  pr-1004-body.md  pr-1093-body.md  pr-1110-body.md  pr-982-body.md  pr-body.md  remove-temp-commit-message.txt
crates/tbx-next/: Cargo.toml  (+1 more)
docs/: agent-notes.md  tbx-6502-profile.md  tbx-quickref.ja.md
examples/: asciiart1.tbx  asciiart2.tbx  eightqueen.tbx  star_trek.tbx
lib/: basic.tbx  result.tbx
scripts/: tbx-task
src/: array_ref.rs  cell.rs  constants.rs  dict.rs  error.rs  expr.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  primitives.rs  statement_reader.rs  vm.rs
tests/: build_sanitize_tests.rs  expr_legacy_array_syntax_tests.rs  tbx16.rs  tbx_lib_tests.rs  trek_interaction_tests.rs
(+299 files in other folders)
