[package]
name = "tbx"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "Tiny BASIC eXtensible - a bootstrappable BASIC interpreter"

[workspace]
members = [
    ".",
    "crates/tbx-next",
]
resolver = "2"

[lib]
name = "tbx"
path = "src/lib.rs"

[[bin]]
name = "tbx"
path = "src/main.rs"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
tempfile = "3"
